fix: workflow secrets

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,11 @@ jobs:
       - name: Run lint
         env:
           CI: true
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_MODEL: ${{ secrets.OPENAI_MODEL }}
+          QDRANT_URL: ${{ secrets.QDRANT_URL }}
+          EMBEDDING_MODEL: ${{ secrets.EMBEDDING_MODEL }}
+          CACHE_COLLECTION_NAME: ${{ secrets.CACHE_COLLECTION_NAME }}
         run: npm run lint
 
   build:
@@ -47,4 +52,9 @@ jobs:
       - name: Build
         env:
           CI: true
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_MODEL: ${{ secrets.OPENAI_MODEL }}
+          QDRANT_URL: ${{ secrets.QDRANT_URL }}
+          EMBEDDING_MODEL: ${{ secrets.EMBEDDING_MODEL }}
+          CACHE_COLLECTION_NAME: ${{ secrets.CACHE_COLLECTION_NAME }}
         run: npm run build
