basic user auth schema and ui setup

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,18 @@ OPENAI_MODEL=model-id
 QDRANT_URL=http://localhost:6333
 EMBEDDING_MODEL=embedding-model-id
 CACHE_COLLECTION_NAME=
+
+# Database (PostgreSQL for authentication)
+DATABASE_URL=postgresql://user:password@localhost:5432/agentic_chat
+
+# Authentication (Better Auth)
+BETTER_AUTH_SECRET=your-secret-key-here # Generate with: openssl rand -base64 32
+BETTER_AUTH_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Google OAuth (Get from: https://console.cloud.google.com/apis/credentials)
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# UploadThing (for file uploads)
+UPLOADTHING_TOKEN=your-uploadthing-token
