--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.42",
+    "@prisma/client": "^6.16.3",
     "@qdrant/js-client-rest": "^1.15.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
@@ -22,6 +23,7 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "@uploadthing/react": "^7.3.3",
     "ai": "^5.0.60",
+    "better-auth": "^1.3.26",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -30,6 +32,7 @@
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "openai": "^6.1.0",
+    "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sonner": "^2.0.7",
@@ -45,6 +48,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "prisma": "^6.16.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
