--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,10 @@ EMBEDDING_MODEL=embedding-model-id
 CACHE_COLLECTION_NAME=
 
 # Database (PostgreSQL for authentication)
-DATABASE_URL=postgresql://user:password@localhost:5432/agentic_chat
+# For Neon: Use the pooled URL (with -pooler) for DATABASE_URL
+# and the direct URL (without -pooler) for DIRECT_DATABASE_URL
+DATABASE_URL=postgresql://user:password@host-pooler.region.aws.neon.tech:5432/dbname?sslmode=require
+DIRECT_DATABASE_URL=postgresql://user:password@host.region.aws.neon.tech:5432/dbname?sslmode=require
 
 # Authentication (Better Auth)
 BETTER_AUTH_SECRET=your-secret-key-here # Generate with: openssl rand -base64 32
