refactor: auth schema and ux decisions

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# Encryption (REQUIRED for API key storage)
+# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+ENCRYPTION_KEY=your-64-character-hex-encryption-key-here
+
 # OpenAI API (Optional - for server-side fallback when users don't use BYOK)
 OPENAI_API_KEY=sk-...
 OPENAI_MODEL=model-id
