--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "NODE_OPTIONS='--use-openssl-ca' next dev --turbopack",
-    "build": "NODE_OPTIONS='--use-openssl-ca' next build --turbopack",
+    "build": "prisma generate && NODE_OPTIONS='--use-openssl-ca' next build --turbopack",
     "start": "NODE_OPTIONS='--use-openssl-ca' next start",
     "lint": "eslint",
     "db:generate": "prisma generate",
