fix: semantic cache TTL and img preview nitpick

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ OPENAI_MODEL=model-id
 QDRANT_URL=http://localhost:6333
 EMBEDDING_MODEL=embedding-model-id
 CACHE_COLLECTION_NAME=
+CACHE_TTL_SECONDS=3600 # Cache time-to-live in seconds (default: 3600 = 1 hour)
 
 # Database (PostgreSQL for authentication)
 # For Neon: Use the pooled URL (with -pooler) for DATABASE_URL
