feat: mem0 integration with qdrant

--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,12 @@ ENCRYPTION_KEY=your-64-character-hex-encryption-key-here
 OPENAI_API_KEY=sk-...
 OPENAI_MODEL=model-id
 
-# Qdrant Vector Database (for semantic caching)
+# Qdrant Vector Database (for semantic caching and memory)
 QDRANT_URL=http://localhost:6333
-EMBEDDING_MODEL=embedding-model-id
-CACHE_COLLECTION_NAME=
+EMBEDDING_MODEL=text-embedding-3-large
+EMBEDDING_DIMENSIONS=3072 # text-embedding-3-large = 3072, text-embedding-3-small = 1536
+CACHE_COLLECTION_NAME=semantic_cache
+MEMORY_COLLECTION_NAME=user_memories
 CACHE_TTL_SECONDS=3600 # Cache time-to-live in seconds (default: 3600 = 1 hour)
 
 # Database (PostgreSQL for authentication)
