--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "shiki": "3.13.0",
     "sonner": "^2.0.7",
+    "streamdown": "^1.3.0",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.4",
     "uuid": "^13.0.0",
