--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.4",
     "uuid": "^13.0.0",
+    "vaul": "^1.1.2",
     "zod": "^4.1.11"
   },
   "devDependencies": {
