--- a/.env.example
+++ b/.env.example
@@ -6,12 +6,14 @@ ENCRYPTION_KEY=your-64-character-hex-encryption-key-here
 OPENAI_API_KEY=sk-...
 OPENAI_MODEL=model-id
 
-# Qdrant Vector Database (for semantic caching and memory)
+# Qdrant Vector Database (for semantic caching, memory, and RAG)
 QDRANT_URL=http://localhost:6333
+DOCUMENTS_COLLECTION_NAME=documents
 EMBEDDING_MODEL=text-embedding-3-large
 EMBEDDING_DIMENSIONS=3072 # text-embedding-3-large = 3072, text-embedding-3-small = 1536
 CACHE_COLLECTION_NAME=semantic_cache
 MEMORY_COLLECTION_NAME=user_memories
+DOCUMENTS_COLLECTION_NAME=rag_documents
 CACHE_TTL_SECONDS=3600 # Cache time-to-live in seconds (default: 3600 = 1 hour)
 
 # Database (PostgreSQL for authentication)
