--- a/package.json
+++ b/package.json
@@ -73,5 +73,11 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@browserbasehq/stagehand": {
+      "zod": "$zod",
+      "openai": "$openai"
+    }
   }
 }
