fix: improve RAG configuration and error handling

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,21 @@ ENCRYPTION_KEY=your-64-character-hex-encryption-key-here
 OPENAI_API_KEY=sk-...
 OPENAI_MODEL=model-id
 
-# Qdrant Vector Database (for semantic caching, memory, and RAG)
-QDRANT_URL=http://localhost:6333
+# Qdrant Vector Database (REQUIRED - for semantic caching, memory, and RAG)
+# Supports both local and cloud instances with automatic detection
+#
+# For LOCAL Qdrant:
+# - Install: docker run -p 6333:6333 qdrant/qdrant
+# - Set QDRANT_URL (protocol optional, will default to http://)
+# - Leave QDRANT_API_KEY empty or unset
+QDRANT_URL=localhost:6333
+#
+# For CLOUD Qdrant:
+# - Set QDRANT_URL to your cloud instance (protocol optional, will default to https://)
+# - Set QDRANT_API_KEY to your cluster API key
+# QDRANT_URL=your-cluster.region.cloud.qdrant.io:6333
+# QDRANT_API_KEY=your-qdrant-cloud-api-key
+#
 DOCUMENTS_COLLECTION_NAME=documents
 EMBEDDING_MODEL=text-embedding-3-large
 EMBEDDING_DIMENSIONS=3072 # text-embedding-3-large = 3072, text-embedding-3-small = 1536
