refactor: upgraded to pgVector, qdrant had searching incompatibility between local and cloud

--- a/.env.example
+++ b/.env.example
@@ -6,26 +6,44 @@ ENCRYPTION_KEY=your-64-character-hex-encryption-key-here
 OPENAI_API_KEY=sk-...
 OPENAI_MODEL=model-id
 
-# Qdrant Vector Database (REQUIRED - for semantic caching, memory, and RAG)
-# Supports both local and cloud instances with automatic detection
+# pgvector Configuration (REQUIRED - for semantic caching, memory, and RAG)
+# Uses PostgreSQL with pgvector extension (same database as auth)
+# Vectors are stored in PostgreSQL tables: document_chunk, semantic_cache, conversation_memory
 #
-# For LOCAL Qdrant:
-# - Install: docker run -p 6333:6333 qdrant/qdrant
-# - Set QDRANT_URL (protocol optional, will default to http://)
-# - Leave QDRANT_API_KEY empty or unset
-QDRANT_URL=localhost:6333
+# DIMENSION HANDLING (PostgreSQL 8KB page limit):
+# - <=2000 dims: Uses vector type (fp32, 4 bytes per dim) with HNSW indexes
+# - 2001-4000 dims: Uses halfvec type (fp16, 2 bytes per dim) with HNSW indexes
+# - >4000 dims: Not indexable - see PGVECTOR_UPGRADE.md for solutions
 #
-# For CLOUD Qdrant:
-# - Set QDRANT_URL to your cloud instance (protocol optional, will default to https://)
-# - Set QDRANT_API_KEY to your cluster API key
-# QDRANT_URL=your-cluster.region.cloud.qdrant.io:6333
-# QDRANT_API_KEY=your-qdrant-cloud-api-key
+# VERSION REQUIREMENTS:
+# - pgvector >= 0.5.0: Basic vector support (up to 2000 dimensions)
+# - pgvector >= 0.7.0: Adds halfvec support (up to 4000 dimensions)
+# - To check version: SELECT extversion FROM pg_extension WHERE extname = 'vector';
+# - To upgrade: ALTER EXTENSION vector UPDATE TO '0.7.0'; (or latest)
 #
+# EMBEDDING MODEL OPTIONS:
+# 1. text-embedding-3-large (3072 dims) - Best accuracy, requires pgvector 0.7.0+
+#    EMBEDDING_MODEL=text-embedding-3-large
+#    EMBEDDING_DIMENSIONS=3072
+#
+# 2. text-embedding-3-large (reduced) - Good accuracy, any pgvector version
+#    EMBEDDING_MODEL=text-embedding-3-large
+#    EMBEDDING_DIMENSIONS=1536
+#    Note: Uses OpenAI's 'dimensions' parameter to reduce output from 3072 to 1536
+#    with minimal accuracy loss (Matryoshka Representation Learning)
+#
+# 3. text-embedding-3-small (1536 dims) - Faster, smaller, any pgvector version
+#    EMBEDDING_MODEL=text-embedding-3-small
+#    EMBEDDING_DIMENSIONS=1536
+#
+# For cloud providers (Neon/Supabase/AWS):
+# - Neon: Usually has pgvector 0.7.0+, check database dashboard
+# - Supabase: May need to manually update in SQL editor
+# - AWS RDS/Aurora: Check available extension versions
+#
+# For self-hosted: https://github.com/pgvector/pgvector#installation
 EMBEDDING_MODEL=text-embedding-3-large
-EMBEDDING_DIMENSIONS=3072 # text-embedding-3-large = 3072, text-embedding-3-small = 1536
-CACHE_COLLECTION_NAME=semantic_cache
-MEMORY_COLLECTION_NAME=user_memories
-DOCUMENTS_COLLECTION_NAME=rag_documents
+EMBEDDING_DIMENSIONS=3072
 CACHE_TTL_SECONDS=3600 # Cache time-to-live in seconds (default: 3600 = 1 hour)
 
 # Database (PostgreSQL for authentication)
