--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "@langchain/community": "^0.3.57",
     "@langchain/core": "^0.3.78",
     "@langchain/openai": "^0.6.14",
-    "@langchain/qdrant": "^0.1.3",
     "@langchain/textsplitters": "^0.1.0",
     "@prisma/client": "^6.16.3",
-    "@qdrant/js-client-rest": "^1.15.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
@@ -49,6 +47,7 @@
     "openai": "^6.1.0",
     "pdf-parse": "^1.1.1",
     "pg": "^8.16.3",
+    "pgvector": "^0.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "shiki": "3.13.0",
@@ -65,6 +64,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20.19.19",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
