--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@react-pdf/renderer": "^4.3.1",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@tanstack/react-virtual": "^3.13.12",
     "@types/uuid": "^10.0.0",
     "@uploadthing/react": "^7.3.3",
     "ai": "^5.0.60",
