--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@langchain/openai": "^0.6.14",
     "@langchain/textsplitters": "^0.1.0",
     "@prisma/client": "^6.16.3",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
