--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "test:doc": "tsx scripts/test-doc-loader.ts",
+    "test:mime": "tsx scripts/test-mime-detection.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.42",
@@ -62,6 +64,8 @@
     "uploadthing": "^7.7.4",
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
+    "word-extractor": "^1.0.4",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.11"
   },
   "devDependencies": {
@@ -72,10 +76,12 @@
     "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/word-extractor": "^1.0.6",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "prisma": "^6.16.3",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   },
