feat: added re-reranker for better RAG results and minor routing fixes

--- a/.env.example
+++ b/.env.example
@@ -42,6 +42,17 @@ EMBEDDING_MODEL=text-embedding-3-large
 EMBEDDING_DIMENSIONS=3072
 CACHE_TTL_SECONDS=3600 # Cache time-to-live in seconds (default: 3600 = 1 hour)
 
+# Cohere Re-ranking (OPTIONAL - enhances RAG retrieval quality)
+# Get your API key from: https://dashboard.cohere.com/api-keys
+# When enabled, uses two-stage retrieval:
+# 1. Vector search retrieves initial candidates (4x the final limit)
+# 2. Cohere rerank model re-scores and reorders candidates
+# 3. Returns top N most relevant results
+# This significantly improves answer quality for RAG queries
+# If not set, the system will fallback to standard vector search only
+COHERE_API_KEY=your-cohere-api-key-here
+RERANKER_MODEL=rerank-v3.5
+
 # Database (PostgreSQL for authentication)
 # For Neon: Use the pooled URL (with -pooler) for DATABASE_URL
 # and the direct URL (without -pooler) for DIRECT_DATABASE_URL
