feat: web search tool

--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,10 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 
 # UploadThing (for file uploads)
 UPLOADTHING_TOKEN=your-uploadthing-token
+
+# Tavily Web Search API (OPTIONAL - enables web search tool)
+# Get your API key from: https://tavily.com/
+# Allows AI to search the web for current information, news, and real-time data
+# Free tier: 1000 searches/month
+# If not set, web search tool will be disabled
+TAVILY_API_KEY=your-tavily-api-key-here
