--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@langchain/textsplitters": "^0.1.0",
     "@prisma/client": "^6.16.3",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
@@ -61,6 +62,7 @@
     "sonner": "^2.0.7",
     "streamdown": "^1.3.0",
     "tailwind-merge": "^3.3.1",
+    "tavily": "^1.0.2",
     "tiktoken": "^1.0.22",
     "uploadthing": "^7.7.4",
     "uuid": "^13.0.0",
