--- a/.env.example
+++ b/.env.example
@@ -77,3 +77,10 @@ UPLOADTHING_TOKEN=your-uploadthing-token
 # Free tier: 1000 searches/month
 # If not set, web search tool will be disabled
 TAVILY_API_KEY=your-tavily-api-key-here
+
+# YouTube Data API v3 (OPTIONAL - enhances YouTube tool with metadata)
+# Get your API key from: https://console.cloud.google.com/apis/credentials
+# Provides video titles, channel names, durations, and descriptions for chapter extraction
+# Free tier: 10,000 quota units/day (approximately 10,000 video metadata requests)
+# If not set, YouTube tool will still work but with limited metadata
+YOUTUBE_API_KEY=your-youtube-api-key-here
