--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.22",
+    "googleapis": "^162.0.0",
     "langchain": "^0.3.35",
     "lucide-react": "^0.544.0",
     "mammoth": "^1.11.0",
@@ -68,6 +69,7 @@
     "vaul": "^1.1.2",
     "word-extractor": "^1.0.4",
     "xlsx": "^0.18.5",
+    "youtube-transcript": "^1.2.1",
     "zod": "^4.1.11"
   },
   "devDependencies": {
