refactor: better memory tool

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,15 @@
 # Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 ENCRYPTION_KEY=your-64-character-hex-encryption-key-here
 
-# pgvector Configuration (REQUIRED - for semantic caching, memory, and RAG)
+# Mem0 (REQUIRED - for persistent AI memory)
+# Get your API key from: https://app.mem0.ai/dashboard/api-keys
+# Mem0 provides intelligent memory management for AI conversations
+MEM0_API_KEY=m0-xxx
+
+# pgvector Configuration (REQUIRED - for semantic caching and RAG)
 # Uses PostgreSQL with pgvector extension (same database as auth)
-# Vectors are stored in PostgreSQL tables: document_chunk, semantic_cache, conversation_memory
+# Vectors are stored in PostgreSQL tables: document_chunk, semantic_cache
+# NOTE: Memory storage is now handled by Mem0 cloud service (see MEM0_API_KEY above)
 #
 # DIMENSION HANDLING (PostgreSQL 8KB page limit):
 # - <=2000 dims: Uses vector type (fp32, 4 bytes per dim) with HNSW indexes
