--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@langchain/core": "^0.3.78",
     "@langchain/openai": "^0.6.14",
     "@langchain/textsplitters": "^0.1.0",
+    "@mem0/vercel-ai-provider": "^2.0.4",
     "@prisma/client": "^6.16.3",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
