--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ai-sdk/openai": "^2.0.42",
     "@langchain/community": "^0.3.57",
     "@langchain/core": "^0.3.78",
+    "@langchain/langgraph": "^0.4.9",
     "@langchain/openai": "^0.6.14",
     "@langchain/textsplitters": "^0.1.0",
     "@mem0/vercel-ai-provider": "^2.0.4",
