--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "postinstall": "prisma generate",
     "dev": "NODE_OPTIONS='--use-openssl-ca' next dev --turbopack",
     "build": "prisma generate && NODE_OPTIONS='--max-old-space-size=4096 --use-openssl-ca' next build",
     "start": "NODE_OPTIONS='--use-openssl-ca' next start",
