refactor: fallback transcriptions supported using groq whisper for yt tool

--- a/.env.example
+++ b/.env.example
@@ -90,3 +90,9 @@ TAVILY_API_KEY=your-tavily-api-key-here
 # Free tier: 10,000 quota units/day (approximately 10,000 video metadata requests)
 # If not set, YouTube tool will still work but with limited metadata
 YOUTUBE_API_KEY=your-youtube-api-key-here
+
+# Groq API (OPTIONAL - enables audio transcription for restricted YouTube videos)
+# Get your API key from: https://console.groq.com/keys
+# When YouTube captions are disabled, this extracts and transcribes audio using Whisper
+# If not set, videos without captions will fail to transcribe
+GROQ_API_KEY=your-groq-api-key-here
