--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.42",
+    "@distube/ytdl-core": "^4.16.12",
     "@langchain/community": "^0.3.57",
     "@langchain/core": "^0.3.78",
     "@langchain/langgraph": "^0.4.9",
@@ -76,7 +77,6 @@
     "word-extractor": "^1.0.4",
     "xlsx": "^0.18.5",
     "youtube-transcript": "^1.2.1",
-    "yt-dlp-wrap": "^2.3.12",
     "zod": "^4.1.11"
   },
   "devDependencies": {
