--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
   "functions": {
     "app/**/*.{ts,tsx}": {
       "maxDuration": 60,
-      "memory": 2048,
-      "includeFiles": "node_modules/ffmpeg-static/ffmpeg"
+      "memory": 2048
     }
   }
 }
