fix: reverted misc.

--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,7 @@
   "buildCommand": "NODE_OPTIONS='--max-old-space-size=4096' npm run build",
   "functions": {
     "app/**/*.{ts,tsx}": {
-      "maxDuration": 60,
-      "memory": 2048
+      "maxDuration": 60
     }
   }
 }
