feat: gmail tools and ui fixes

--- a/.env.example
+++ b/.env.example
@@ -71,6 +71,10 @@ BETTER_AUTH_URL=http://localhost:3000
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Google OAuth (Get from: https://console.cloud.google.com/apis/credentials)
+# Required for authentication and Google Suite tool (Gmail integration)
+# Make sure to add the following to your OAuth consent screen:
+# - Scopes: email, profile, gmail.readonly, gmail.send, gmail.modify, gmail.labels
+# - Authorized redirect URIs: http://localhost:3000/api/google-suite/auth/callback (for dev)
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 
