--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
           sed -i 's|DATABASE_URL=.*|DATABASE_URL=postgresql://user:password@localhost:5432/testdb|' .env
           sed -i 's|DIRECT_DATABASE_URL=.*|DIRECT_DATABASE_URL=postgresql://user:password@localhost:5432/testdb|' .env
       - name: Install dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
       - name: Run lint
         run: npm run lint
 
@@ -55,6 +55,6 @@ jobs:
           sed -i 's|DATABASE_URL=.*|DATABASE_URL=postgresql://user:password@localhost:5432/testdb|' .env
           sed -i 's|DIRECT_DATABASE_URL=.*|DIRECT_DATABASE_URL=postgresql://user:password@localhost:5432/testdb|' .env
       - name: Install dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
       - name: Build
         run: npm run build
