--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,11 +15,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: npm
+          cache: pnpm
       - name: Setup environment
         run: |
           cp .env.example .env
@@ -28,9 +32,9 @@ jobs:
           sed -i 's|DATABASE_URL=.*|DATABASE_URL=postgresql://user:password@localhost:5432/testdb|' .env
           sed -i 's|DIRECT_DATABASE_URL=.*|DIRECT_DATABASE_URL=postgresql://user:password@localhost:5432/testdb|' .env
       - name: Install dependencies
-        run: npm install --legacy-peer-deps
+        run: pnpm install --frozen-lockfile
       - name: Run lint
-        run: npm run lint
+        run: pnpm run lint
 
   build:
     runs-on: ubuntu-latest
@@ -42,11 +46,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: npm
+          cache: pnpm
       - name: Setup environment
         run: |
           cp .env.example .env
@@ -55,6 +63,6 @@ jobs:
           sed -i 's|DATABASE_URL=.*|DATABASE_URL=postgresql://user:password@localhost:5432/testdb|' .env
           sed -i 's|DIRECT_DATABASE_URL=.*|DIRECT_DATABASE_URL=postgresql://user:password@localhost:5432/testdb|' .env
       - name: Install dependencies
-        run: npm install --legacy-peer-deps
+        run: pnpm install --frozen-lockfile
       - name: Build
-        run: npm run build
+        run: pnpm run build
