--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@uploadthing/react": "^7.3.3",
     "better-auth": "^1.3.26",
     "canvas": "^3.2.0",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
