feat: scraping urls for better context

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@langchain/openai": "^0.6.14",
     "@langchain/textsplitters": "^0.1.0",
     "@mem0/vercel-ai-provider": "^2.0.4",
+    "@mozilla/readability": "^0.6.0",
     "@prisma/client": "^6.16.3",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
@@ -54,6 +55,7 @@
     "framer-motion": "^12.23.22",
     "googleapis": "^162.0.0",
     "langchain": "^0.3.35",
+    "linkedom": "^0.18.12",
     "lucide-react": "^0.544.0",
     "mammoth": "^1.11.0",
     "next": "15.5.4",
