--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mozilla/readability": "^0.6.0",
     "@prisma/client": "^6.16.3",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
