--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "vaul": "^1.1.2",
     "word-extractor": "^1.0.4",
     "xlsx": "^0.18.5",
+    "youtube-transcript": "^1.2.1",
     "youtubei.js": "^16.0.1",
     "zod": "^4.1.11"
   },
